[package]
name = "sorobanshield"
version = "0.1.0"
edition = "2021"
authors = ["SorobanShield Contributors"]
description = "A lightweight security toolkit for Soroban smart contracts"
license = "MIT"
repository = "https://github.com/stellar/sorobanshield"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
